Add deployment scripts for GCP Cloud Run and local Docker execution
- Introduced build_prod.sh for deploying to GCP Cloud Run using configurations from config.txt.
- Added run_local.sh for running the application locally with Docker, mirroring the Cloud Run environment.
- Removed the encrypted cookies.sqlite file as part of the cleanup process.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@ env/
 # Secrets
 config.txt
 cookies.sqlite
+cookies.sqlite.enc
+
+# Downloaded binaries
+yt-dlp_linux
 
 # Downloads and media
 *.webm
